Fix bug where SG tiles would not fit to viewport

--- a/styles/sass/_small-groups.scss
+++ b/styles/sass/_small-groups.scss
@@ -14,6 +14,7 @@ $sg-tile-max-width: 400px;
 	max-width: $sg-tile-max-width;
 	@include layout(compact) {
 		max-width: none;
+		width: 100%;
 	}
 }
 
